--- a/timingframework-swing/pom.xml
+++ b/timingframework-swing/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.bidib.net.java.timingframework</groupId>
         <artifactId>timingframework</artifactId>
-        <version>7.4.2-SNAPSHOT</version>
+        <version>7.4.2</version>
     </parent>
 
     <artifactId>timingframework-swing</artifactId>
