--- a/timingframework-core/pom.xml
+++ b/timingframework-core/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.bidib.net.java.timingframework</groupId>
         <artifactId>timingframework</artifactId>
-        <version>7.4.3</version>
+        <version>7.4.4-SNAPSHOT</version>
     </parent>
 
     <artifactId>timingframework-core</artifactId>
